# backend/src/main/java/com/odde/doughnut/controllers/RestQuizQuestionController.java
@@ -154,4 +154,14 @@ class RestQuizQuestionController {
     currentUser.assertAuthorization(quizQuestionAndAnswer.getNote());
     return quizQuestionService.toggleApproval(quizQuestionAndAnswer);
   }
+
+  @DeleteMapping("/{questionId}/question")
+  @Transactional
+  public QuizQuestionAndAnswer deleteQuestion(
+      @PathVariable("questionId") @Schema(type = "integer")
+          QuizQuestionAndAnswer quizQuestionAndAnswer)
+      throws UnexpectedNoAccessRightException {
+    currentUser.assertAuthorization(quizQuestionAndAnswer.getNote());
+    return quizQuestionService.deleteQuestion(quizQuestionAndAnswer);
+  }
 }
