# open_api_docs.yaml
@@ -2495,6 +2495,30 @@ paths:
                 type: array
                 items:
                   type: string
+  /api/quiz-questions/{questionId}/question:
+    delete:
+      tags:
+      - rest-quiz-question-controller
+      operationId: deleteQuestion
+      parameters:
+      - name: questionId
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        "500":
+          description: Internal Server Error
+          content:
+            '*/*':
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/QuizQuestionAndAnswer"
 components:
   schemas:
     Circle:
